# elite-airflow

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  elite-zipped  pyproject.toml  requirements.txt
.github/: CODEOWNER  CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml
business_logic/: el_pipeline.py  live_demo.py  lumina.py  lumina_config.py  test.py
business_logic/alpen_mechanik/: alpen_logic.py
business_logic/balti_logix/: balt.py
business_logic/bbss/: weather_api.py
business_logic/bbss_project/: bbss_weatherapi.py
business_logic/gdm/: gdm_script.py  gdm_script_bad.py  google_sheets.py  gsheets_auth.py  s3_to_gsheets_extract.py
business_logic/hg_data/: hg_spreadsheet_s3.py
business_logic/liffey_luxury/: datasources_to_s3_extract.py  gsheets_to_s3_extract.py  join.py  transform.py
business_logic/lumina_brick_properties/: .env  lumina.py
config/: airflow.cfg
dags/: alpen.py  alpen_pipeline.py  another_job.py  baltilogix.py  bbss.py  etl.py  example.py  gdm_egress.py  gdm_s3_to_gsheets.py  hg_ingestion.py  liffey_luxury.py  liffey_luxury_transformation.py  live_demo.py  lll_transformation.py  lumina_bricks.py  mare_viva_dag.py  nordic_ingestion.py  scardinavas.py  scheldt.py  third.py
nordic_ws/: main.py  requirements.txt
plugins/: append_to_gsheet.py  aws.py  backfills_helper.py  database.py  date_time.py  date_utils.py  extract_gsheet.py  get_gsheet.py  get_ssm.py  google_sheet.py  gsheets_auth.py  ingest_from_gsheet.py  pandas_helper.py  process_dates.py  psycopg2_connection.py  push_to_gsheet.py  s3_helper.py
(+24 files in other folders)
